[gd_scene load_steps=19 format=3 uid="uid://i6nkaxusc5s3"]

[ext_resource type="TileSet" uid="uid://ckdj8m24olhk1" path="res://Assets/tilemap.tres" id="1_2ok8s"]
[ext_resource type="Script" path="res://Levels/level_04_sacrifice_chamber.gd" id="1_u8k5i"]
[ext_resource type="PackedScene" uid="uid://b5heeqig4y3my" path="res://Entities/Hero/hero.tscn" id="2_np3bv"]
[ext_resource type="PackedScene" uid="uid://wsmlmhofoyky" path="res://World/BarredDoor/prison_bars.tscn" id="3_jfk7c"]
[ext_resource type="PackedScene" uid="uid://7hpd42fr1nlw" path="res://FX/Water/water_body.tscn" id="5_h6jb0"]
[ext_resource type="PackedScene" uid="uid://bfem6jove134i" path="res://Entities/Bat/bat.tscn" id="6_3y5ve"]
[ext_resource type="PackedScene" uid="uid://duwpkeop6bhdk" path="res://World/Chest/treasure_chest.tscn" id="7_5xjaw"]
[ext_resource type="Texture2D" uid="uid://djh8xvp8cjqli" path="res://World/Pickup/shield.png" id="8_jbwys"]
[ext_resource type="PackedScene" uid="uid://hkwu5mgomxyh" path="res://World/Door/portal.tscn" id="9_4jp7o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j34js"]
size = Vector2(34, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3son8"]
size = Vector2(80, 7)

[sub_resource type="Curve2D" id="Curve2D_wnjor"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 0, 79.37, -0.529134, -79.37, 0.529134, -86.5679, 56, 0, 0, 0, 0, -172, 0)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hlq2j"]
size = Vector2(92, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evj88"]
size = Vector2(84, 70)

[sub_resource type="Curve2D" id="Curve2D_80j4h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 0, -32.3045, 1.44419, 32.3045, -1.44419, 32, 56, 0, 0, 0, 0, 64, 0)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vs6i"]
size = Vector2(82.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlvbu"]
size = Vector2(74, 70)

[sub_resource type="CircleShape2D" id="CircleShape2D_qxybo"]
radius = 28.0

[node name="Level-04-Sacrifice-Chamber" type="Node2D" groups=["level"]]
script = ExtResource("1_u8k5i")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_2ok8s")
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(0, 131072, 1, 1, 131072, 1, 2, 131072, 1, 3, 131072, 1, 4, 131072, 1, 5, 131072, 1, 6, 131072, 1, 7, 131072, 1, 8, 131072, 1, 65544, 131072, 1, 65545, 131072, 1, 65546, 131072, 1, 65547, 131072, 1, 65548, 131072, 1, 12, 131072, 1, 13, 131072, 1, 14, 131072, 1, 15, 131072, 1, 16, 131072, 1, 65552, 131072, 1, 65553, 131072, 1, 65554, 131072, 1, 65555, 131072, 1, 65556, 131072, 1, 20, 131072, 1, 21, 131072, 1, 22, 131072, 1, 23, 131072, 1, 24, 131072, 1, 25, 131072, 1, 26, 131072, 1, 27, 131072, 1, 28, 131072, 1, 29, 131072, 1, 30, 131072, 1, -327650, 131072, 1, -655329, 131072, 1, -589793, 131072, 1, -524257, 131072, 1, -458721, 131072, 1, -393185, 131072, 1, 31, 131072, 1, -655304, 131072, 1, -589768, 131072, 1, -524232, 131072, 1, -458696, 131072, 1, -393160, 131072, 1, -327624, 131072, 1, -262088, 131072, 1, -196552, 131072, 1, -131016, 393216, 2, -65480, 393216, 2, 56, 393216, 3, -720865, 131072, 1, -720864, 131072, 1, -720863, 131072, 1, -720862, 131072, 1, -720861, 327680, 2, -720858, 393216, 2, -720857, 131072, 1, -720856, 131072, 1, -720855, 327680, 2, -720852, 393216, 2, -720851, 131072, 1, -720850, 131072, 1, -720849, 327680, 2, -720846, 393216, 2, -720845, 131072, 1, -720844, 131072, 1, -720843, 131072, 1, -720842, 131072, 1, -720841, 131072, 1, -720840, 131072, 1, -327649, 131072, 1, -786388, 196608, 2, -851924, 196608, 2, -917460, 196608, 2, -982996, 196608, 2, -786391, 65536, 2, -851927, 65536, 2, -917463, 65536, 2, -982999, 65536, 2, 65567, 131072, 1, 65568, 131072, 1, 65569, 131072, 1, 65570, 131072, 1, 65571, 131072, 1, 65572, 131072, 1, 65573, 131072, 1, 65574, 131072, 1, 65575, 131072, 1, 65576, 131072, 1, 65577, 131072, 1, 65578, 131072, 1, 65579, 131072, 1, 65580, 131072, 1, 65581, 131072, 1, 65582, 131072, 1, 65583, 131072, 1, 65584, 131072, 1, 65585, 131072, 1, 65586, 131072, 1, 65587, 131072, 1, 65588, 131072, 1, 65589, 131072, 1, 65590, 131072, 1, 65591, 131072, 1, 65592, 131072, 1, -1048532, 196608, 2, -1114068, 196608, 2, -1048535, 65536, 2, -1114071, 65536, 2, -1114077, 65536, 2, -1048541, 65536, 2, -983005, 65536, 2, -917469, 65536, 2, -851933, 65536, 2, -786397, 65536, 2, -1114074, 196608, 2, -1048538, 196608, 2, -983002, 196608, 2, -917466, 196608, 2, -851930, 196608, 2, -786394, 196608, 2, -1114065, 65536, 2, -1048529, 65536, 2, -982993, 65536, 2, -917457, 65536, 2, -851921, 65536, 2, -786385, 65536, 2, -1114062, 196608, 2, -1048526, 196608, 2, -982990, 196608, 2, -917454, 196608, 2, -851918, 196608, 2, -786382, 196608, 2, -196554, 262144, 15, -196553, 327680, 15, -393216, 131072, 1, -393215, 131072, 1, -393214, 131072, 1, -393213, 131072, 1, -393212, 131072, 1, -393211, 131072, 1, -393210, 131072, 1, -393209, 131072, 1, -393208, 131072, 1, -393207, 131072, 1, -393206, 131072, 1, -393205, 131072, 1, -393204, 131072, 1, -393203, 131072, 1, -393202, 131072, 1, -393201, 131072, 1, -393200, 131072, 1, -393199, 131072, 1, -393198, 131072, 1, -393197, 131072, 1, -393196, 131072, 1, -393195, 131072, 1, -393194, 131072, 1, -393193, 131072, 1, -393192, 131072, 1, -393191, 131072, 1, -393190, 131072, 1, -393189, 131072, 1, -393188, 131072, 1, -393187, 131072, 1, -327651, 131072, 1, -393186, 131072, 1, -131017, 327680, 16, -65481, 327680, 17, 55, 327680, 17, -393184, 65536, 16, -458720, 65536, 15, -458719, 131072, 15, -327648, 131072, 1, -262145, 196608, 2, -196609, 196608, 2, -131073, 196608, 2, -65537, 196608, 2, -1, 196608, 2, 65535, 393216, 2, -327681, 393216, 3)
layer_1/name = "Paint"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-1114076, 720896, 2, -1048540, 720896, 2, -983004, 720896, 2, -917468, 720896, 2, -851932, 720896, 2, -786396, 720896, 2, -720860, 720896, 2, -1114075, 851968, 2, -1048539, 851968, 2, -983003, 851968, 2, -917467, 851968, 2, -851931, 851968, 2, -786395, 851968, 2, -720859, 851968, 2, -1114070, 720896, 2, -1048534, 720896, 2, -982998, 720896, 2, -917462, 720896, 2, -851926, 720896, 2, -786390, 720896, 2, -720854, 720896, 2, -1114069, 851968, 2, -1048533, 851968, 2, -982997, 851968, 2, -917461, 851968, 2, -851925, 851968, 2, -786389, 851968, 2, -720853, 851968, 2, -1114064, 720896, 2, -1048528, 720896, 2, -982992, 720896, 2, -917456, 720896, 2, -851920, 720896, 2, -786384, 720896, 2, -720848, 720896, 2, -1114063, 851968, 2, -1048527, 851968, 2, -982991, 851968, 2, -917455, 851968, 2, -851919, 851968, 2, -786383, 851968, 2, -720847, 851968, 2, -655328, 720896, 1, -589792, 720896, 2, -524256, 720896, 2, -458720, 720896, 2, -393184, 720896, 2, -327648, 786432, 2, -262112, 786432, 1, -196576, 786432, 2, -131040, 786432, 2, -65504, 786432, 2, 32, 720896, 2, -655327, 786432, 1, -589791, 786432, 2, -524255, 786432, 2, -458719, 786432, 2, -393183, 786432, 2, -327647, 786432, 2, -262111, 786432, 2, -196575, 786432, 2, -131039, 786432, 2, -65503, 786432, 2, 33, 786432, 2, -655326, 786432, 1, -589790, 786432, 2, -524254, 786432, 2, -458718, 786432, 2, -393182, 786432, 2, -327646, 786432, 2, -262110, 786432, 2, -196574, 786432, 2, -131038, 786432, 2, -65502, 786432, 2, 34, 786432, 2, -655325, 786432, 1, -589789, 786432, 2, -524253, 786432, 2, -458717, 786432, 2, -393181, 786432, 2, -327645, 786432, 2, -262109, 786432, 2, -196573, 786432, 2, -131037, 786432, 2, -65501, 786432, 2, 35, 786432, 2, -655324, 786432, 2, -589788, 786432, 2, -524252, 786432, 2, -458716, 786432, 2, -393180, 786432, 2, -327644, 786432, 2, -262108, 786432, 2, -196572, 786432, 2, -131036, 786432, 2, -65500, 786432, 2, 36, 786432, 2, -655323, 786432, 2, -589787, 786432, 2, -524251, 786432, 2, -458715, 786432, 2, -393179, 786432, 2, -327643, 786432, 2, -262107, 786432, 2, -196571, 786432, 2, -131035, 786432, 2, -65499, 786432, 2, 37, 786432, 2, -655322, 786432, 1, -589786, 786432, 2, -524250, 786432, 2, -458714, 786432, 2, -393178, 786432, 2, -327642, 786432, 2, -262106, 786432, 2, -196570, 786432, 2, -131034, 786432, 2, -65498, 786432, 2, 38, 786432, 2, -655321, 786432, 1, -589785, 786432, 2, -524249, 786432, 2, -458713, 786432, 2, -393177, 786432, 2, -327641, 786432, 2, -262105, 786432, 2, -196569, 786432, 2, -131033, 786432, 2, -65497, 786432, 2, 39, 786432, 2, -655320, 786432, 1, -589784, 786432, 2, -524248, 786432, 2, -458712, 786432, 2, -393176, 786432, 2, -327640, 786432, 2, -262104, 786432, 2, -196568, 786432, 2, -131032, 786432, 2, -65496, 786432, 2, 40, 786432, 2, -655319, 786432, 1, -589783, 786432, 2, -524247, 786432, 2, -458711, 786432, 2, -393175, 786432, 2, -327639, 786432, 2, -262103, 786432, 2, -196567, 786432, 2, -131031, 786432, 2, -65495, 786432, 2, 41, 786432, 2, -655318, 786432, 2, -589782, 786432, 2, -524246, 786432, 2, -458710, 786432, 2, -393174, 786432, 2, -327638, 786432, 2, -262102, 786432, 2, -196566, 786432, 2, -131030, 786432, 2, -65494, 786432, 2, 42, 786432, 2, -655317, 786432, 2, -589781, 786432, 2, -524245, 786432, 2, -458709, 786432, 2, -393173, 786432, 2, -327637, 786432, 2, -262101, 786432, 2, -196565, 786432, 2, -131029, 786432, 2, -65493, 786432, 2, 43, 786432, 2, -655316, 786432, 1, -589780, 786432, 2, -524244, 786432, 2, -458708, 786432, 2, -393172, 786432, 2, -327636, 786432, 2, -262100, 786432, 2, -196564, 786432, 2, -131028, 786432, 2, -65492, 786432, 2, 44, 786432, 2, -655315, 786432, 1, -589779, 786432, 2, -524243, 786432, 2, -458707, 786432, 2, -393171, 786432, 2, -327635, 786432, 2, -262099, 786432, 2, -196563, 786432, 2, -131027, 786432, 2, -65491, 786432, 2, 45, 786432, 2, -655314, 786432, 1, -589778, 786432, 2, -524242, 786432, 2, -458706, 786432, 2, -393170, 786432, 2, -327634, 786432, 2, -262098, 786432, 2, -196562, 786432, 2, -131026, 786432, 2, -65490, 786432, 2, 46, 786432, 2, -655313, 786432, 1, -589777, 786432, 2, -524241, 786432, 2, -458705, 786432, 2, -393169, 786432, 2, -327633, 786432, 2, -262097, 786432, 2, -196561, 786432, 2, -131025, 786432, 2, -65489, 786432, 2, 47, 786432, 2, -655312, 786432, 2, -589776, 786432, 2, -524240, 786432, 2, -458704, 786432, 2, -393168, 786432, 2, -327632, 786432, 2, -262096, 786432, 2, -196560, 786432, 2, -131024, 786432, 2, -65488, 786432, 2, 48, 786432, 2, -655311, 786432, 2, -589775, 786432, 2, -524239, 786432, 2, -458703, 786432, 2, -393167, 786432, 2, -327631, 786432, 2, -262095, 786432, 2, -196559, 786432, 2, -131023, 786432, 2, -65487, 786432, 2, 49, 786432, 2, -655310, 786432, 1, -589774, 786432, 2, -524238, 786432, 2, -458702, 786432, 2, -393166, 786432, 2, -327630, 786432, 2, -262094, 786432, 2, -196558, 786432, 2, -131022, 786432, 2, -65486, 786432, 2, 50, 786432, 2, -655309, 786432, 1, -589773, 786432, 2, -524237, 786432, 2, -458701, 786432, 2, -393165, 786432, 2, -327629, 786432, 2, -262093, 786432, 2, -196557, 786432, 2, -131021, 786432, 2, -65485, 786432, 2, 51, 786432, 2, -655308, 786432, 1, -589772, 786432, 2, -524236, 786432, 2, -458700, 786432, 2, -393164, 786432, 2, -327628, 786432, 2, -262092, 786432, 2, -196556, 786432, 2, -131020, 786432, 2, -65484, 786432, 2, 52, 786432, 2, -655307, 786432, 1, -589771, 786432, 2, -524235, 786432, 2, -458699, 786432, 2, -393163, 786432, 2, -327627, 786432, 2, -262091, 786432, 2, -196555, 786432, 2, -131019, 786432, 2, -65483, 786432, 2, 53, 786432, 2, -655306, 786432, 1, -589770, 786432, 2, -524234, 786432, 2, -458698, 786432, 2, -393162, 786432, 2, -327626, 786432, 2, -262090, 786432, 2, -196554, 786432, 2, -131018, 786432, 2, -65482, 786432, 2, 54, 786432, 2, -655305, 851968, 1, -589769, 851968, 2, -524233, 851968, 2, -458697, 851968, 2, -393161, 851968, 2, -327625, 851968, 2, -262089, 851968, 2, -196553, 851968, 2, -131017, 851968, 2, -65481, 851968, 2, 55, 851968, 2, -327680, 786432, 1, -262144, 786432, 2, -196608, 786432, 2, -131072, 786432, 2, -65536, 786432, 2, 0, 786432, 2, -327679, 786432, 1, -262143, 786432, 2, -196607, 786432, 2, -131071, 786432, 2, -65535, 786432, 2, 1, 786432, 2, -327678, 786432, 1, -262142, 786432, 2, -196606, 786432, 2, -131070, 786432, 2, -65534, 786432, 2, 2, 786432, 2, -327677, 786432, 1, -262141, 786432, 2, -196605, 786432, 2, -131069, 786432, 2, -65533, 786432, 2, 3, 786432, 2, -327676, 786432, 1, -262140, 786432, 2, -196604, 786432, 2, -131068, 786432, 2, -65532, 786432, 2, 4, 786432, 2, -327675, 786432, 1, -262139, 786432, 2, -196603, 786432, 2, -131067, 786432, 2, -65531, 786432, 2, 5, 786432, 2, -327674, 786432, 1, -262138, 786432, 2, -196602, 786432, 2, -131066, 786432, 2, -65530, 786432, 2, 6, 786432, 2, -327673, 786432, 1, -262137, 786432, 2, -196601, 786432, 2, -131065, 786432, 2, -65529, 786432, 2, 7, 786432, 2, -327672, 786432, 1, -262136, 786432, 2, -196600, 786432, 2, -131064, 786432, 2, -65528, 786432, 2, 8, 786432, 2, -327671, 786432, 1, -262135, 786432, 2, -196599, 786432, 2, -131063, 786432, 2, -65527, 786432, 2, 9, 786432, 2, -327670, 786432, 1, -262134, 786432, 2, -196598, 786432, 2, -131062, 786432, 2, -65526, 786432, 2, 10, 786432, 2, -327669, 786432, 1, -262133, 786432, 2, -196597, 786432, 2, -131061, 786432, 2, -65525, 786432, 2, 11, 786432, 2, -327668, 786432, 1, -262132, 786432, 2, -196596, 786432, 2, -131060, 786432, 2, -65524, 786432, 2, 12, 786432, 2, -327667, 786432, 1, -262131, 786432, 2, -196595, 786432, 2, -131059, 786432, 2, -65523, 786432, 2, 13, 786432, 2, -327666, 786432, 1, -262130, 786432, 2, -196594, 786432, 2, -131058, 786432, 2, -65522, 786432, 2, 14, 786432, 2, -327665, 786432, 1, -262129, 786432, 2, -196593, 786432, 2, -131057, 786432, 2, -65521, 786432, 2, 15, 786432, 2, -327664, 786432, 1, -262128, 786432, 2, -196592, 786432, 2, -131056, 786432, 2, -65520, 786432, 2, 16, 786432, 2, -327663, 786432, 1, -262127, 786432, 2, -196591, 786432, 2, -131055, 786432, 2, -65519, 786432, 2, 17, 786432, 2, -327662, 786432, 1, -262126, 786432, 2, -196590, 786432, 2, -131054, 786432, 2, -65518, 786432, 2, 18, 786432, 2, -327661, 786432, 1, -262125, 786432, 2, -196589, 786432, 2, -131053, 786432, 2, -65517, 786432, 2, 19, 786432, 2, -327660, 786432, 1, -262124, 786432, 2, -196588, 786432, 2, -131052, 786432, 2, -65516, 786432, 2, 20, 786432, 2, -327659, 786432, 1, -262123, 786432, 2, -196587, 786432, 2, -131051, 786432, 2, -65515, 786432, 2, 21, 786432, 2, -327658, 786432, 1, -262122, 786432, 2, -196586, 786432, 2, -131050, 786432, 2, -65514, 786432, 2, 22, 786432, 2, -327657, 786432, 1, -262121, 786432, 2, -196585, 786432, 2, -131049, 786432, 2, -65513, 786432, 2, 23, 786432, 2, -327656, 786432, 1, -262120, 786432, 2, -196584, 786432, 2, -131048, 786432, 2, -65512, 786432, 2, 24, 786432, 2, -327655, 786432, 1, -262119, 786432, 2, -196583, 786432, 2, -131047, 786432, 2, -65511, 786432, 2, 25, 786432, 2, -327654, 786432, 1, -262118, 786432, 2, -196582, 786432, 2, -131046, 786432, 2, -65510, 786432, 2, 26, 786432, 2, -327653, 786432, 1, -262117, 786432, 2, -196581, 786432, 2, -131045, 786432, 2, -65509, 786432, 2, 27, 786432, 2, -327652, 851968, 1, -262116, 786432, 2, -196580, 786432, 2, -131044, 786432, 2, -65508, 786432, 2, 28, 786432, 2, -327651, 786432, 2, -262115, 786432, 1, -196579, 786432, 2, -131043, 786432, 2, -65507, 786432, 2, 29, 786432, 2, -327650, 786432, 2, -262114, 786432, 1, -196578, 786432, 2, -131042, 786432, 2, -65506, 786432, 2, 30, 786432, 2, -327649, 786432, 2, -262113, 786432, 1, -196577, 786432, 2, -131041, 786432, 2, -65505, 786432, 2, 31, 786432, 2)
layer_2/name = "Objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-65507, 131072, 13, -65513, 65536, 13, 38, 131072, 13, 42, 65536, 13, 43, 65536, 13, 52, 131072, 13, -655309, 262144, 12, -655308, 327680, 12, -655307, 393216, 12, -655314, 196608, 12, -655327, 327680, 12, -196553, 196608, 12, -262090, 65536, 13, -655328, 262144, 12, -655326, 393216, 12, -655322, 196608, 12, -655319, 196608, 12, -524256, 65536, 13)

[node name="Hero" parent="." instance=ExtResource("2_np3bv")]
position = Vector2(72, 0)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(696, -8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("RectangleShape2D_j34js")

[node name="PrisonBars" parent="." instance=ExtResource("3_jfk7c")]
position = Vector2(496, -64)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EnemySpawn" type="Node2D" parent="."]
position = Vector2(688, -248)

[node name="EnemySpawn2" type="Node2D" parent="."]
position = Vector2(592, -248)

[node name="EnemySpawn3" type="Node2D" parent="."]
position = Vector2(784, -248)

[node name="WaterBody2" parent="." instance=ExtResource("5_h6jb0")]
z_index = 50
position = Vector2(256, 8)
liquid_type = 1

[node name="PlayerDetectionArea" parent="WaterBody2" index="1"]
position = Vector2(1, 0)

[node name="CollisionShape2D" parent="WaterBody2/PlayerDetectionArea" index="0"]
position = Vector2(39, 3)
shape = SubResource("RectangleShape2D_3son8")

[node name="WaterBody3" parent="." instance=ExtResource("5_h6jb0")]
z_index = 50
position = Vector2(136, 8)
liquid_type = 1

[node name="PlayerDetectionArea" parent="WaterBody3" index="1"]
position = Vector2(1, 0)

[node name="CollisionShape2D" parent="WaterBody3/PlayerDetectionArea" index="0"]
position = Vector2(39, 3)
shape = SubResource("RectangleShape2D_3son8")

[node name="Bat3" parent="." instance=ExtResource("6_3y5ve")]
position = Vector2(360, -80)

[node name="Path2D" parent="Bat3/PathLeft" index="0"]
position = Vector2(0.531792, 0)
scale = Vector2(0.468208, 1)
curve = SubResource("Curve2D_wnjor")

[node name="PathFollow2D" parent="Bat3/PathLeft/Path2D" index="0"]
rotation = 2.57263

[node name="CollisionShape2D" parent="Bat3/PathLeft/PlayerDetectionArea" index="0"]
position = Vector2(-40, 64)
shape = SubResource("RectangleShape2D_hlq2j")

[node name="CollisionShape2D" parent="Bat3/PathLeft/WallDetectionArea" index="0"]
position = Vector2(-38, 37)
shape = SubResource("RectangleShape2D_evj88")

[node name="Path2D" parent="Bat3/PathRight" index="0"]
curve = SubResource("Curve2D_80j4h")

[node name="PathFollow2D" parent="Bat3/PathRight/Path2D" index="0"]
rotation = 1.06522

[node name="CollisionShape2D" parent="Bat3/PathRight/PlayerDetectionArea" index="0"]
position = Vector2(38.75, 64)
shape = SubResource("RectangleShape2D_1vs6i")

[node name="CollisionShape2D" parent="Bat3/PathRight/WallDetectionArea" index="0"]
position = Vector2(35, 37)
shape = SubResource("RectangleShape2D_nlvbu")

[node name="Bat4" parent="." instance=ExtResource("6_3y5ve")]
position = Vector2(248, -80)

[node name="Path2D" parent="Bat4/PathLeft" index="0"]
position = Vector2(0.531792, 0)
scale = Vector2(0.468208, 1)
curve = SubResource("Curve2D_wnjor")

[node name="PathFollow2D" parent="Bat4/PathLeft/Path2D" index="0"]
rotation = 2.57263

[node name="CollisionShape2D" parent="Bat4/PathLeft/PlayerDetectionArea" index="0"]
position = Vector2(-40, 64)
shape = SubResource("RectangleShape2D_hlq2j")

[node name="CollisionShape2D" parent="Bat4/PathLeft/WallDetectionArea" index="0"]
position = Vector2(-38, 37)
shape = SubResource("RectangleShape2D_evj88")

[node name="Path2D" parent="Bat4/PathRight" index="0"]
curve = SubResource("Curve2D_80j4h")

[node name="PathFollow2D" parent="Bat4/PathRight/Path2D" index="0"]
rotation = 1.06522

[node name="CollisionShape2D" parent="Bat4/PathRight/PlayerDetectionArea" index="0"]
position = Vector2(38.75, 64)
shape = SubResource("RectangleShape2D_1vs6i")

[node name="CollisionShape2D" parent="Bat4/PathRight/WallDetectionArea" index="0"]
position = Vector2(35, 37)
shape = SubResource("RectangleShape2D_nlvbu")

[node name="TreasureChest" parent="." instance=ExtResource("7_5xjaw")]
position = Vector2(872, 16)
content = 1

[node name="ShieldCollider" type="StaticBody2D" parent="."]
visible = false
position = Vector2(880, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldCollider"]
position = Vector2(9, 10)
shape = SubResource("CircleShape2D_qxybo")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="ShieldCollider"]
texture = ExtResource("8_jbwys")

[node name="Portal" parent="." instance=ExtResource("9_4jp7o")]
position = Vector2(48, 0)
scale = Vector2(-1, 1)
address_in_level = 6
destination_level = 6
destination_address = 2

[editable path="WaterBody2"]
[editable path="WaterBody3"]
[editable path="Bat3"]
[editable path="Bat3/Animal/DamageDealerArea"]
[editable path="Bat3/Animal/DamageReceiverArea"]
[editable path="Bat4"]
[editable path="Bat4/Animal/DamageDealerArea"]
[editable path="Bat4/Animal/DamageReceiverArea"]
